# mesher

./: .gitignore  CMakeLists.txt  README.md
include/: bvh.hpp  camera.hpp  context.hpp  glad.h  mesh.hpp  model.hpp  shader.hpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: app.cpp  bvh.cpp  context.hpp  glad.cpp  mesh.cpp  mesh.hpp  model.cpp  shader.cpp  utils.hpp
src/raytracer/: bvh.cpp  bvh.hpp
src/renderer/: camera.cpp  camera.hpp  shader.cpp  shader.hpp
